--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1>Política de Privacidad</h1>
         <p class="date">Última actualización: 19 Enero 2026</p>
 
-        <p>Esta política de privacidad rige el uso de la aplicación móvil <strong>MathAcademy Bachillerato</strong> para dispositivos móviles que fue creada por <strong>José Luis Casas Bautista</strong>.</p>
+        <p>Esta política de privacidad rige el uso de la aplicación móvil <strong>MathAcademy Bachillerato</strong> para dispositivos móviles que fue creada por <strong>Publicaciones CASAS</strong>.</p>
 
         <h2>1. Información que recopilamos</h2>
         <p>Nuestra aplicación está diseñada para ser lo más privada posible. Recopilamos datos mínimos necesarios para el funcionamiento técnico y la mejora de la experiencia:</p>
@@ -59,14 +59,14 @@
         <h2>2. Servicios de Terceros</h2>
         <p>Para proveer ciertas funciones, utilizamos los siguientes servicios que pueden recopilar información de acuerdo a sus propias políticas:</p>
         <ul>
-            <li><strong>Google Play Services:</strong> <a href="https://www.google.com/policies/privacy/" target="_blank">Privacidad</a></li>
+        <li><strong>Google Play Services:</strong> <a href="https://www.google.com/policies/privacy/" target="_blank">Privacidad</a></li>
         <li><strong>AdMob:</strong> <a href="https://support.google.com/admob/answer/6128543?hl=es" target="_blank">Privacidad</a></li>
+        <li><strong>Turso:</strong> <a href="https://turso.tech/privacy-policy" target="_blank">Privacidad</a></li>
         <li><strong>RevenueCat:</strong> <a href="https://www.revenuecat.com/privacy" target="_blank">Privacidad</a></li>
-        <li><strong>Turso (base de datos):</strong> <a href="https://turso.tech/privacy-policy" target="_blank">Privacidad</a></li>
         </ul>
 
         <h2>3. Divulgación de datos</h2>
-        <p>No vendemos, comercializamos ni transferimos de ninguna manera su información de identificación personal a terceros. Solo compartimos datos agregados y anónimos con servicios de análisis para mejorar la estabilidad de la app.</p>
+        <p>No vendemos, comercializamos ni transferimos de ninguna manera su información de identificación personal a terceros. Solo compartimos datos agregados y 100% anónimos con servicios de análisis para mejorar la estabilidad de la app.</p>
 
         <h2>4. Seguridad</h2>
         <p>Nos preocupamos por salvaguardar la confidencialidad de su información. Contamos con salvaguardas físicas, electrónicas y de procedimiento para proteger la información que procesamos.</p>
